[package]
name = "mullvad-encrypted-dns-proxy"
edition.workspace = true
rust-version.workspace = true
description = "A port forwarding proxy that retrieves its configuration from a AAAA record over DoH"
repository.workspace = true
license.workspace = true

[dependencies]
hickory-resolver = { workspace = true, features = ["https-ring", "tls-ring"] }
log = { workspace = true }
rustls.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros"] }
webpki-roots.workspace = true

[dev-dependencies]
tracing-subscriber = { workspace = true }

[lints]
workspace = true
