[package]
name = "mullvad-exclude"
edition.workspace = true
rust-version.workspace = true
description = "Runs programs outside the Mullvad VPN tunnel on Linux"
repository.workspace = true
license.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true, features = ["process", "user"] }
talpid-cgroup = { path = "../talpid-cgroup" }
thiserror = { workspace = true }
zbus = { version = "5.2", default-features = false, features = ["blocking-api", "tokio"] }
anyhow.workspace = true
libbpf-rs = { version = "0.25.0", features = ["libbpf-sys"] }
mnl = "0.3.0"
nftnl = { version = "0.9.1", features = ["nftnl-1-3-0"] }
rand.workspace = true

[features]
cgroup2 = []

[lints]
workspace = true
