[package]
name = "mullvad-exclude"
description = "Runs programs outside the Mullvad VPN tunnel on Linux"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
cgroup2 = []

[lints]
workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true, features = ["process", "user"] }
thiserror = { workspace = true }
talpid-cgroup = { path = "../talpid-cgroup" }
zbus = { version = "5.2", default-features = false, features = ["blocking-api", "tokio"] }

[dependencies]
anyhow.workspace = true
libbpf-rs = { version = "0.25.0", features = ["libbpf-sys"] }
mnl = "0.3.0"
nftnl = { version = "0.9.1", features = ["nftnl-1-3-0"] }
