[package]
name = "mullvad-fs"
description = "File utility library"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
log = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt"] }
uuid = { version = "1.4.1", features = ["v4"] }

talpid-types = { path = "../talpid-types" }
