[package]
name = "mullvad-fs"
edition.workspace = true
rust-version.workspace = true
description = "File utility library"
repository.workspace = true
license.workspace = true

[dependencies]
log = { workspace = true }
talpid-types = { path = "../talpid-types" }
tokio = { workspace = true, features = ["fs", "rt"] }
uuid = { version = "1.4.1", features = ["v4"] }

[lints]
workspace = true
