[package]
name = "mullvad-ios"
edition.workspace = true
rust-version.workspace = true
description = "Entry point for all FFI code on iOS"
repository.workspace = true
license.workspace = true

[lib]
bench = false
crate-type = ["staticlib"]

[target.'cfg(target_os = "ios")'.dependencies]
futures = { workspace = true }
hyper = { version = "1.4.1", features = ["client", "http1"] }
hyper-util = { workspace = true }
libc = "0.2"
log = { workspace = true }
mockito = "1.6.1"
mullvad-api = { path = "../mullvad-api", default-features = false }
mullvad-encrypted-dns-proxy = { path = "../mullvad-encrypted-dns-proxy" }
mullvad-logging = { path = "../mullvad-logging" }
mullvad-types = { path = "../mullvad-types" }
shadowsocks = { workspace = true }
talpid-future = { path = "../talpid-future" }
talpid-tunnel-config-client = { path = "../talpid-tunnel-config-client" }
talpid-types = { path = "../talpid-types" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }
tower = { workspace = true }
tracing = "0.1"
tracing-subscriber = { workspace = true }
tunnel-obfuscation = { path = "../tunnel-obfuscation" }

[target.'cfg(target_os = "macos")'.build-dependencies]
cbindgen = { version = "0.28.0", default-features = false }

[features]
# Allow the API server to be used
api-override = ["mullvad-api/api-override"]

[lints]
workspace = true
