[package]
name = "mullvad-ios"
edition.workspace = true
rust-version.workspace = true
description = "Entry point for all FFI code on iOS"
repository.workspace = true
license.workspace = true

[lib]
bench = false
crate-type = ["staticlib"]

[target.'cfg(target_os = "ios")'.dependencies]
bytes = { workspace = true }
futures = { workspace = true }
byteorder = "1"
gotatun = { workspace = true, features = ["daita", "device", "tun"] }
hyper = { version = "1.4.1", features = ["client", "http1"] }
internet-checksum = "0.2"
ipnetwork = { workspace = true }
hyper-util = { workspace = true }
libc = "0.2"
log = { workspace = true }
mockito = { workspace = true }
mullvad-api = { path = "../mullvad-api", default-features = false }
mullvad-encrypted-dns-proxy = { path = "../mullvad-encrypted-dns-proxy" }
mullvad-logging = { path = "../mullvad-logging" }
mullvad-types = { path = "../mullvad-types" }
shadowsocks = { workspace = true }
smoltcp = { version = "0.12", default-features = false, features = [
  "medium-ip",
  "proto-ipv4",
  "proto-ipv6",
  "socket-tcp",
  "socket-icmp",
  "std",
] }
talpid-future = { path = "../talpid-future" }
talpid-tunnel-config-client = { path = "../talpid-tunnel-config-client" }
talpid-types = { path = "../talpid-types" }
rand = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tonic = { workspace = true }
tower = { workspace = true }
tracing = "0.1"
tracing-subscriber = { workspace = true }
tunnel-obfuscation = { path = "../tunnel-obfuscation" }
zerocopy = "0.8"

[target.'cfg(target_os = "macos")'.build-dependencies]
cbindgen = { version = "0.28.0", default-features = false }

[features]
# Allow the API server to be used
api-override = ["mullvad-api/api-override"]

[lints]
workspace = true
