[package]
name = "mullvad-ios"
edition.workspace = true
rust-version.workspace = true
description = "Entry point for all FFI code on iOS"
repository.workspace = true
license.workspace = true

[lib]
bench = false
crate-type = ["staticlib"]

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
bytes = { workspace = true }
futures = { workspace = true }
gotatun = { workspace = true, features = ["daita", "device", "tun"] }
hyper = { version = "1.4.1", features = ["client", "http1"] }
ipnetwork = { workspace = true }
hyper-util = { workspace = true }
libc = "0.2"
log = { workspace = true }
mockito = { workspace = true }
mullvad-api = { path = "../mullvad-api", default-features = false }
mullvad-encrypted-dns-proxy = { path = "../mullvad-encrypted-dns-proxy" }
mullvad-logging = { path = "../mullvad-logging" }
mullvad-types = { path = "../mullvad-types" }
nix = { workspace = true }
regex = "1"
shadowsocks = { workspace = true }
smoltcp = { version = "0.12", default-features = false, features = [
  "medium-ip",
  "proto-ipv4",
  "proto-ipv6",
  "socket-tcp",
  "socket-icmp",
  "std",
] }
talpid-future = { path = "../talpid-future" }
talpid-tunnel-config-client = { path = "../talpid-tunnel-config-client" }
talpid-types = { path = "../talpid-types" }
rand = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-util = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tracing = "0.1"
tracing-subscriber = { workspace = true }
tunnel-obfuscation = { path = "../tunnel-obfuscation" }
uniffi = { workspace = true }
zerocopy = "0.8"

[target.'cfg(target_os = "macos")'.build-dependencies]
cbindgen = { version = "0.28.0", default-features = false }

# Host-side binary that generates the uniffi Swift bindings for the gotatun FFI.
# Only built when explicitly requested (`--bin uniffi-bindgen --features uniffi-cli`);
# the normal iOS `--lib` build never compiles it.
[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[features]
# Allow the API server to be used
api-override = ["mullvad-api/api-override"]
# Enable the uniffi-bindgen CLI (only needed by the `uniffi-bindgen` binary).
uniffi-cli = ["uniffi/cli"]

[lints]
workspace = true

# To make GotaTun fast enough to not be bothersome in DEBUG builds, lets
# disable debug assertions, overflow checks and set the optimization level to 3
# for the relevant crates. Relevant being on the data path for traffic between
# the tunnel device and the UDP socket.
[profile.dev.package]
gotatun.opt-level=3
gotatun.debug-assertions=false
gotatun.overflow-checks=false
smoltcp.opt-level=3
smoltcp.debug-assertions=false
smoltcp.overflow-checks=false
ring.opt-level=3
chacha20poly1305.opt-level=3
chacha20poly1305.debug-assertions=false
chacha20poly1305.overflow-checks=false
chacha20.opt-level=3
chacha20.overflow-checks=false
poly1305.opt-level=3
poly1305.overflow-checks=false
mullvad-ios.debug-assertions=false
mullvad-ios.overflow-checks=false
