[package]
name = "mullvad-ipc-client"
version = "0.1.0"
authors = ["Mullvad VPN <admin@mullvad.net>", "Janito Vaqueiro Ferreira Filho <janito@mullvad.net>"]
description = "RPC client for Mullvad daemon"
license = "GPL-3.0"

[dependencies]
error-chain = "0.11"
serde = "1.0"
talpid-ipc = { path = "../talpid-ipc" }
