[package]
name = "mullvad-ipc-client"
version = "0.1.0"
authors = ["Mullvad VPN <admin@mullvad.net>"]
description = "RPC client for Mullvad daemon"
license = "GPL-3.0"
edition = "2018"

[dependencies]
err-derive = "0.2.1"
mullvad-types = { path = "../mullvad-types" }
serde = "1.0"
talpid-ipc = { path = "../talpid-ipc" }
talpid-types = { path = "../talpid-types" }
mullvad-paths = { path = "../mullvad-paths" }
jsonrpc-client-core = { git = "https://github.com/mullvad/jsonrpc-client-rs", rev = "68aac55b" }
jsonrpc-client-ipc = { git = "https://github.com/mullvad/jsonrpc-client-rs", rev = "68aac55b" }
jsonrpc-client-pubsub = { git = "https://github.com/mullvad/jsonrpc-client-rs", rev = "68aac55b" }
tokio = "0.1.15"
tokio-timer = "0.1"
futures = "0.1"
log = "0.4"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.5", features = ["accctrl", "aclapi", "securitybaseapi", "winbase", "winerror", "winnt"] }
