[package]
name = "mullvad-jni"
description = "JNI interface for the Mullvad daemon"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
# Allow the API server to use to be configured
api-override = ["mullvad-api/api-override"]

[lib]
crate_type = ["cdylib"]

[target.'cfg(target_os = "android")'.dependencies]
err-derive = { workspace = true }
futures = "0.3"
ipnetwork = "0.20"
jnix = { version = "0.5.1", features = ["derive"] }
log = { workspace = true }
log-panics = "2"
nix = "0.23"
rand = "0.8.5"

mullvad-daemon = { path = "../mullvad-daemon" }
mullvad-problem-report = { path = "../mullvad-problem-report" }
mullvad-types = { path = "../mullvad-types" }
mullvad-api = { path = "../mullvad-api" }
talpid-tunnel = { path = "../talpid-tunnel" }
talpid-types = { path = "../talpid-types" }
