[package]
name = "mullvad-logging"
description = "Shared logging configuration for Mullvad VPN"
version = "0.0.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log = { workspace = true }

[lints]
workspace = true
