[package]
name = "mullvad-logging"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "Shared logging configuration for Mullvad VPN"
repository.workspace = true
license.workspace = true

[dependencies]
tracing-subscriber = { workspace = true }

[lints]
workspace = true
