[package]
name = "mullvad-management-interface"
description = "Mullvad VPN IPC. Contains types and functions for IPC clients and servers."
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
log = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
mullvad-types = { path = "../mullvad-types" }
mullvad-paths = { path = "../mullvad-paths" }
talpid-types = { path = "../talpid-types" }

tonic = { workspace = true }
tower = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features =  ["rt"] }
parity-tokio-ipc = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = "0.23"

[build-dependencies]
tonic-build = { workspace = true, default-features = false, features = ["transport", "prost"] }
