[package]
name = "mullvad-management-interface"
edition.workspace = true
rust-version.workspace = true
description = "Mullvad VPN IPC. Contains types and functions for IPC clients and servers."
repository.workspace = true
license.workspace = true

[dependencies]
chrono = { workspace = true }
futures = { workspace = true }
hyper-util = { workspace = true }
log = { workspace = true }
mullvad-paths = { path = "../mullvad-paths" }
mullvad-types = { path = "../mullvad-types" }
prost = { workspace = true }
prost-types = { workspace = true }
talpid-types = { path = "../talpid-types" }
thiserror = { workspace = true }
tipsy = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tonic = { workspace = true }
tower = { workspace = true }
vec1 = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true, default-features = false, features = [
  "prost",
  "transport"
] }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["fs", "user"] }

[lints]
workspace = true
