[package]
name = "mullvad-masque-proxy"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A limited functionality UDP over HTTP3 proxy"

[dependencies]
quinn = "0.11"
tokio = { workspace = true, features = [ "macros", "io-util" ] }
h3 = "0.0.7"
h3-datagram = "0.0.1"
h3-quinn = { version = "0.0.9", features = [ "datagram" ]}
http = "1"
rustls = { version = "0.23", default-features = false }
rustls-pemfile = "2.1.3"
bytes = "1"

[dev-dependencies]
tokio = { workspace = true, features = [ "macros", "io-util", "rt-multi-thread" ] }
clap = { workspace = true }
rand = "0.8.5"

[lints]
workspace = true
