[package]
name = "mullvad-masque-proxy"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A limited functionality UDP over HTTP3 proxy"

[dependencies]
quinn = { version = "0.11", default-features = false, features = ["log", "runtime-tokio", "rustls-ring"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs",  "macros", "io-util"] }
h3 = "0.0.7"
h3-datagram = "0.0.1"
h3-quinn = { version = "0.0.9", features = ["datagram"] }
http = "1"
rustls = { version = "0.23", default-features = false }
rustls-pki-types.workspace = true
bytes = "1"
anyhow = { workspace = true }
libc = "0.2"
log = { workspace = true }
typed-builder = "0.21.0"

[target.'cfg(windows)'.dependencies]
socket2 = { workspace = true }

[target.'cfg(windows)'.dependencies.windows-sys]
workspace = true
features = ["Win32", "Win32_Foundation", "Win32_Networking", "Win32_Networking_WinSock"]

[dev-dependencies]
env_logger = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "io-util", "rt-multi-thread"] }
clap = { workspace = true }
rand = { workspace = true }
criterion = { version = "0.7.0", features = ["html_reports"] }
talpid-tunnel = { path = "../talpid-tunnel" }


[lints]
workspace = true

[[bench]]
name = "fragmentation"
harness = false

