[package]
name = "mullvad-nsis"
edition.workspace = true
rust-version.workspace = true
description = "Helper library used by Mullvad NSIS plugins"
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib"]

[target.'cfg(target_os = "windows")'.build-dependencies]
cbindgen = { version = "0.28.0", default-features = false }

[target.i686-pc-windows-msvc.dependencies]
anyhow.workspace = true
mullvad-paths = { path = "../mullvad-paths" }
talpid-platform-metadata = { path = "../talpid-platform-metadata" }
widestring.workspace = true
windows-sys = { workspace = true, features = [
  "Wdk_Foundation",
  "Wdk_System",
  "Wdk_System_SystemInformation",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_RestartManager",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[lints]
workspace = true
