[package]
name = "mullvad-obfuscated-dns-proxy"
description = "A port forwarding proxy that retrieves its configuration from a AAAA record over DoH"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
byteorder = "1"
hickory-resolver = { version = "0.24.1", features = [ "dns-over-https-rustls" ]}
webpki-roots = "0.25.0"
rustls = "0.21"

[dev-dependencies]
tokio = { workspace = true, features = [ "full" ]}
