[package]
name = "mullvad-paths"
version = "0.0.0"
authors = ["Mullvad VPN"]
description = "Mullvad VPN application paths and directories"
license = "GPL-3.0"
edition = "2021"
publish = false

[dependencies]
err-derive = "0.3.1"

[target.'cfg(not(target_os="android"))'.dependencies]
log = "0.4"

[target.'cfg(windows)'.dependencies]
widestring = "1.0"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.42.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Shell",
]
