[package]
name = "mullvad-paths"
description = "Mullvad VPN application paths and directories"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
err-derive = { workspace = true }

[target.'cfg(not(target_os="android"))'.dependencies]
log = { workspace = true }

[target.'cfg(windows)'.dependencies]
widestring = "1.0"
once_cell = { workspace = true }

[target.'cfg(windows)'.dependencies.windows-sys]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_System_Memory",
]
