[package]
name = "mullvad-paths"
edition.workspace = true
rust-version.workspace = true
description = "Mullvad VPN application paths and directories"
repository.workspace = true
license.workspace = true

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(windows)'.dependencies]
once_cell = { workspace = true }
widestring = { workspace = true }

[target.'cfg(windows)'.dependencies.windows-sys]
workspace = true
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_UI_Shell",
]

[lints]
workspace = true
