[package]
name = "mullvad-problem-report"
version = "0.0.0"
authors = ["Mullvad VPN"]
description = "Collect Mullvad VPN logs into a report and send it to support"
license = "GPL-3.0"
edition = "2021"
publish = false

[dependencies]
dirs-next = "2.0"
err-derive = "0.3.1"
lazy_static = "1.0"
log = "0.4"
regex = "1.0"
uuid = { version = "0.8", features = ["v4"] }
tokio = { version = "1.8", features = ["rt"] }

mullvad-paths = { path = "../mullvad-paths" }
mullvad-api = { path = "../mullvad-api" }
mullvad-version = { path = "../mullvad-version" }
talpid-types = { path = "../talpid-types" }
talpid-platform-metadata = { path = "../talpid-platform-metadata" }

[target.'cfg(not(target_os="android"))'.dependencies]
clap = { version = "3.0", features = ["cargo"] }
env_logger = "0.10.0"

[target.'cfg(target_os = "android")'.dependencies]
duct = "0.13"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
mullvad-version = { path = "../mullvad-version" }

[target.'cfg(windows)'.build-dependencies.windows-sys]
version = "0.42.0"
features = [
    "Win32_System_SystemServices",
]


[package.metadata.winres]
ProductName = "Mullvad VPN"
CompanyName = "Mullvad VPN AB"
LegalCopyright = "(c) 2023 Mullvad VPN AB"
InternalName = "mullvad-problem-report"
OriginalFilename = "mullvad-problem-report.exe"
